--- a/web/src/app/project/project.component.html
+++ b/web/src/app/project/project.component.html
@@ -72,7 +72,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cross click')"
                     data-dismiss="modal">Close</button>
-                <button type="button" [disabled]="!projectForm.valid" class="btn btn-primary">Save changes</button>
+                <button type="submit" [disabled]="!projectForm.valid" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </form>
