--- a/web/src/app/task/task.component.html
+++ b/web/src/app/task/task.component.html
@@ -92,7 +92,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cross click')">Close</button>
-                <button type="button" [disabled]="!taskForm.valid" class="btn btn-primary">Save changes</button>
+                <button type="submit" [disabled]="!taskForm.valid" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </form>
