--- a/web/src/app/profile/edit-profile.component.html
+++ b/web/src/app/profile/edit-profile.component.html
@@ -1,6 +1,6 @@
 <app-breadcrumb *ngIf="breadcrumbData" [data]="breadcrumbData"></app-breadcrumb>
 
-<form (ngSubmit)="onSubmit()" class="w-50">
+<form (ngSubmit)="onSubmit()" #profileForm="ngForm" class="w-50">
     <div class="form-group">
         <label for="inputName">Email Address</label>
         <input type="input" class="form-control form-control-dark disabled" id="inputName"
@@ -29,6 +29,6 @@
 
     <div class="modal-footer">
         <button class="btn btn-primary" (click)="renderToBack()">Cancel</button>
-        <button type="submit" [disabled]="!profile.valid" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary" [disabled]="!profileForm.form.valid">Save Changes</button>
     </div>
 </form>
